<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_slidingmenu_left"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll_sliding_news"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/biz_navigation_tab_news"
            android:layout_weight="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/colorSize"
                android:layout_weight="1"
                android:textSize="@dimen/title_updata"
                android:text="@string/title_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/colorSize"
                android:layout_weight="1"
                android:textSize="@dimen/title_en_news"
                android:text="@string/title_en_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_sliding_favorite"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/biz_navigation_tab_read"
            android:layout_weight="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/colorSize"
                android:layout_weight="1"
                android:textSize="@dimen/title_updata"
                android:text="@string/title_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/colorSize"
                android:layout_weight="1"
                android:textSize="@dimen/title_en_news"
                android:text="@string/title_en_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_sliding_local"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/biz_navigation_tab_local_news"
            android:layout_weight="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/colorSize"
                android:layout_weight="1"
                android:textSize="@dimen/title_updata"
                android:text="@string/title_local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/colorSize"
                android:layout_weight="1"
                android:textSize="@dimen/title_en_news"
                android:text="@string/title_en_local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_sliding_comment"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/biz_navigation_tab_ties"
            android:layout_weight="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/colorSize"
                android:layout_weight="1"
                android:textSize="@dimen/title_updata"
                android:text="@string/title_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/colorSize"
                android:layout_weight="1"
                android:textSize="@dimen/title_en_news"
                android:text="@string/title_en_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_sliding_phone"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/biz_navigation_tab_pics"
            android:layout_weight="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/colorSize"
                android:layout_weight="1"
                android:textSize="@dimen/title_updata"
                android:text="@string/title_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/colorSize"
                android:layout_weight="1"
                android:textSize="@dimen/title_en_news"
                android:text="@string/title_en_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
